--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
 
     <div class="grid">
       
-            <a class="card" href="”雷导的恋足* foot f*h“.JPG" target="_blank" title="”雷导的恋足* foot f*h“.JPG">
-              <img loading="lazy" src="”雷导的恋足* foot f*h“.JPG" alt="”雷导的恋足* foot f*h“.JPG">
-              <div class="name">”雷导的恋足* foot f*h“.JPG</div>
+            <a class="card" href=""雷导的恋足* foot f*h".JPG" target="_blank" title=""雷导的恋足* foot f*h".JPG">
+              <img loading="lazy" src=""雷导的恋足* foot f*h".JPG" alt=""雷导的恋足* foot f*h".JPG">
+              <div class="name">"雷导的恋足* foot f*h".JPG</div>
             </a>
             
 
@@ -144,10 +144,15 @@
     </div>
 
     <div class="footer">
-      Offline gallery · Click any image to open full size
+      Offline gallery · Click any image to open full size.<br>
+      Fan-made project for journaling and Python practice only.<br>
+      All rights belong to their respective owners.<br>
+      If there are any copyright concerns, please let me know and I will gladly take it down.<br>
+      — 甜玉米 💛
     </div>
   </div>
 </body>
 </html>
+
 
 
