--- a/index.html
+++ b/index.html
@@ -150,7 +150,13 @@
               <img loading="lazy" src="“卡”之后也不松手.JPG" alt="“卡”之后也不松手.JPG">
               <div class="name">“卡”之后也不松手.JPG</div>
             </a>
-      
+
+
+            <a class="card" href="都卡了5分钟了 入坑点之一.JPG" target="_blank" title="都卡了5分钟了 入坑点之一.JPG">
+              <img loading="lazy" src="都卡了5分钟了 入坑点之一.JPG" alt="都卡了5分钟了 入坑点之一.JPG">
+              <div class="name">都卡了5分钟了 入坑点之一.JPG</div>
+            </a>
+
            <script>
             (function () {
               const count = document.querySelectorAll('.grid .card').length;
@@ -169,6 +175,7 @@
   </div>
 </body>
 </html>
+
 
 
 
