--- a/index.html
+++ b/index.html
@@ -166,12 +166,12 @@
           </script> 
     </div>
     
-    <footer class="footer">
-      <p>Offline gallery · Click any image to open full size.</p>
-      <p>All rights belong to original owners — contact me for removal if needed.</p>
-      <p>— 甜玉米 </p>
-    </footer>
-    
+    <div class="footer">
+      Offline gallery · Click any image to open full size.<br><br>
+      All rights belong to original owners — contact me for removal if needed.<br><br>
+      — 甜玉米
+    </div>
+
   </div>
 </body>
 </html>
