--- a/index.html
+++ b/index.html
@@ -167,14 +167,15 @@
     </div>
     
     <div class="footer">
-      Offline gallery · Click any image to open full size.<br><br>
-      All rights belong to original owners — contact me for removal if needed.<br><br>
+      Offline gallery · Click any image to open full size.<br>
+      All rights belong to original owners — contact me for removal if needed.<br>
       — 甜玉米
     </div>
 
   </div>
 </body>
 </html>
+
 
 
 
